# fastapi-di

./: Dockerfile  Makefile  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: aio_container.py  containers.py  database.py  di_container.py  gyphi.py  main.py  main_test_aio.py  models.py  repositories.py  services.py  urls.py
app/tests/: test_urls.py
